# MPC_Double_Pend

./: CMakeLists.txt  README.md  config.yaml  qs_log.npy  vs_log.npy
envs/common/: mujoco_env.py  robot_interface.py
envs/pend/: DPC.py  __init__.py
model/: double_pend.urdf  double_pend.xml
model/dynamics/: double_pend.py  double_pend_casadi_dynamics.py  test_pend_casadi.py
model/pinoccio_examples/: casadi_pin.py  meshcat_viewer.py  robot_wrapper_viewer.py  urdf_load.py
msg/: state_message.lcm
msg/exlcm/: example_t.hpp  example_t.py
scripts/: controller.py  controller_2.py  sample_quad.py
scripts/CasADi_examples/: mpc_multi_shot.py  simple_poly.py  simulation_code.py
scripts/matlab/: double_pend.slx
simulator/: sim.py
slprj/ert/double_pend/tmwinternal/: minfo.mat
slprj/grt/_sharedutils/: shared_file.dmr
slprj/grt/double_pend/tmwinternal/: minfo.mat
src/: publisher.cpp  subscriber.cpp
src/Dynamic_model/: double_pend_cart.cpp
